# data_workstation

./: .dockerignore  .env.example  .gitignore  config.yaml  docker-compose.yml  dockerfile  pyproject.toml
.github/workflows/: ci.yml
data_common_transformers/: convert.py  merge_data.py  missing_data_transformers.py  scaling_transformers.py  sortvalues.py  temporal_transformers.py  todatetime.py
feature_store/: date_feature.sql  event_flags.sql  fetch_data.sql  growth_features.sql  interaction_features.sql  rolling_features.sql
notebooks/: Untitled.ipynb  analyse_data.ipynb  test_appl.ipynb  test_feature_store.ipynb  test_pipeline.ipynb  training.ipynb
src/: clean_supabase_data.py  connect.py  docker-compose.yml  dockerfile  requirements.txt
src/app/: main.py  model_loader.py  schema.py
src/project/: features.py  main.py  train.py
src/utils/: find_ticker.py  get_company_overview.py  get_stock_alphavantage.py  train.py
