[tool.poetry]
name = "data-workstation"
version = "0.1.0"
description = "DEV ENV For Data Science project"
authors = ["Boubker Bennani <boubker.bennani.pro@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "*"
numpy = "*"
scikit-learn = "*"
matplotlib = "*"
seaborn = "*"
jupyterlab = "*"
ipykernel = "*"
python-dotenv = "*"
psycopg2-binary = "*"
plotly = "*"
xgboost = "*"
lightgbm = "*"
statsmodels = "*"
nltk = "*"
spacy = "*"
fastapi = "*"
uvicorn = "*"
sqlalchemy = "*"
transformers = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
pytest = "*"
